WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 104134
[Qt] QWebView uses the mobile style and doesn't follow Qt's style
https://bugs.webkit.org/show_bug.cgi?id=104134
Summary
[Qt] QWebView uses the mobile style and doesn't follow Qt's style
Jocelyn Turcotte
Reported
2012-12-05 09:19:42 PST
SSIA
Attachments
Patch
(3.42 KB, patch)
2012-12-05 14:58 PST
,
Pierre Rossi
no flags
Details
Formatted Diff
Diff
Patch
(3.46 KB, patch)
2012-12-06 01:32 PST
,
Pierre Rossi
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jocelyn Turcotte
Comment 1
2012-12-05 09:37:53 PST
For some reason this seems to happen only for the first QWebPage that I create.
Pierre Rossi
Comment 2
2012-12-05 14:58:06 PST
Created
attachment 177836
[details]
Patch
Pierre Rossi
Comment 3
2012-12-05 15:19:33 PST
Comment on
attachment 177836
[details]
Patch Simpler patch coming up...
Pierre Rossi
Comment 4
2012-12-05 15:51:59 PST
Comment on
attachment 177836
[details]
Patch I thought I'd move the call to initializeWebKitWidgets up in QWebPage's constructor, but it's not going to be better in there because of the member initialization, and so it would boil down to the same thing. We are shooting ourselves in the foot by having QtTestBrowser always discard the first WebPage it constructs, it contributed to keep this silly mistake hidden until we merged it in Qt5... :(
Kenneth Rohde Christiansen
Comment 5
2012-12-05 16:48:29 PST
Comment on
attachment 177836
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=177836&action=review
> Source/WebKit/qt/WebCoreSupport/QWebPageAdapter.cpp:172 > +void QWebPageAdapter::initWebCorePage()
initialize please... consistency
Pierre Rossi
Comment 6
2012-12-06 01:32:56 PST
Created
attachment 177969
[details]
Patch
Simon Hausmann
Comment 7
2012-12-06 05:24:24 PST
Comment on
attachment 177969
[details]
Patch Oops
WebKit Review Bot
Comment 8
2012-12-06 07:02:25 PST
Comment on
attachment 177969
[details]
Patch Clearing flags on attachment: 177969 Committed
r136842
: <
http://trac.webkit.org/changeset/136842
>
WebKit Review Bot
Comment 9
2012-12-06 07:02:29 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug